mobile head section visibility fixes

--- a/assets/scss/landing-responsive.scss
+++ b/assets/scss/landing-responsive.scss
@@ -57,7 +57,7 @@
 
       // reasons for mobile devices from 300 to 600
       .reasons-row {
-        margin-top: -330px;
+        margin-top: -270px;
       }
 
       .reasons-col {
@@ -431,7 +431,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      height: 340px;
+      height: auto;
     }
   }
   // EOL 300 - 991
